--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amazon.in.clone</title>
+    <title>Ecommerce-clone</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -15,10 +15,8 @@
   </head>
   <body>
     <header>
-
       <!-- NavBar -->
       <div class="navbar">
-
         <!-- Nav-Logo -->
         <div class="nav-logo border pointer">
           <div class="logo"></div>
@@ -40,7 +38,7 @@
             <option>Electronics</option>
             <option>Amazon Goods</option>
           </select>
-          <input placeholder="Search Amazon.in" class="search-input" />
+          <input placeholder="Search Amazon" class="search-input" />
           <div class="search-icon pointer">
             <i class="fa-solid fa-magnifying-glass fa-lg"></i>
           </div>
@@ -80,10 +78,9 @@
 
         <!-- NavBar Over -->
       </div>
-      
+
       <!-- Panel -->
       <div class="panel">
-
         <!-- Panel-Icon -->
         <div class="panel-icon border pointer hover-effect">
           <i class="fa-solid fa-bars fa-lg menu-icon"></i>
@@ -115,11 +112,15 @@
     </header>
 
     <!-- Hero Section -->
-     <div class="hero-section">
+    <div class="hero-section">
       <div class="hero-message">
-        <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in</a></p>
+        <p>
+          You are on amazon.com. You can also shop on Amazon India for millions
+          of products with fast local delivery.
+          <a>Click here to go to amazon.in</a>
+        </p>
       </div>
-     </div>
+    </div>
 
     <!-- <script src="script.js"></script> -->
   </body>
