--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <select class="search-select pointer">
             <option>All</option>
             <option>Clothing & Accessories</option>
-            <option>Amazon Fashion</option>
+            <option>Shop Fashion</option>
             <option>Electronics</option>
-            <option>Amazon Goods</option>
+            <option>Shop Goods</option>
           </select>
-          <input placeholder="Search Amazon" class="search-input" />
+          <input placeholder="Search Products" class="search-input" />
           <div class="search-icon pointer">
             <i class="fa-solid fa-magnifying-glass fa-lg"></i>
           </div>
@@ -101,7 +101,7 @@
           <p class="border pointer hover-effect">Customer Service</p>
           <p class="border pointer hover-effect">Fashion</p>
           <p class="border pointer hover-effect">Home & Kitchen</p>
-          <p class="border pointer hover-effect">Amazon Pay</p>
+          <p class="border pointer hover-effect">Shop Newproducts</p>
           <p class="border pointer hover-effect">Computers</p>
           <p class="border pointer hover-effect">Books</p>
           <p class="border pointer hover-effect">Home Improvement</p>
@@ -115,9 +115,9 @@
     <div class="hero-section">
       <div class="hero-message">
         <p>
-          You are on amazon.com. You can also shop on Amazon India for millions
+          You are on shop.com. You can also shop in India for millions
           of products with fast local delivery.
-          <a>Click here to go to amazon.in</a>
+          <a>Click here to go to shop.in</a>
         </p>
       </div>
     </div>
