Shop Section Added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="rtsAJIvgcxvU7etXM6qhxyRCQ1rhf6GRk0zD1wb7yzY" />
+    <meta
+      name="google-site-verification"
+      content="rtsAJIvgcxvU7etXM6qhxyRCQ1rhf6GRk0zD1wb7yzY"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce-clone</title>
@@ -116,10 +119,95 @@
     <div class="hero-section">
       <div class="hero-message">
         <p>
-          You are on shop.com. You can also shop in India for millions
-          of products with fast local delivery.
+          You are on shop.com. You can also shop in India for millions of
+          products with fast local delivery.
           <a>Click here to go to shop.in</a>
         </p>
+      </div>
+    </div>
+
+    <!-- Shop-Section -->
+    <div class="shop-section">
+      <!-- BOX-1 -->
+      <div class="box1 box">
+        <div class="box-content">
+          <h2>Home & Appliances</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box1_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
+      </div>
+      <div class="box2 box">
+        <div class="box-content">
+          <h2>Health & Personal Care</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box2_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
+      </div>
+      <div class="box3 box">
+        <div class="box-content">
+          <h2>Furniture & Decor</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box3_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
+      </div>
+      <div class="box4 box">
+        <div class="box-content">
+          <h2>Electronics Devices</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box4_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
+      </div>
+      <div class="box5 box">
+        <div class="box-content">
+          <h2>Beauty Picks</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box5_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
+      </div>
+      <div class="box6 box">
+        <div class="box-content">
+          <h2>Pet Supplies</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box6_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
+      </div>
+      <div class="box7 box">
+        <div class="box-content">
+          <h2>Toys - New Arrival!</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box7_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
+      </div>
+      <div class="box8 box">
+        <div class="box-content">
+          <h2>Discover Fashion Trends</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box8_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
       </div>
     </div>
 
