--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <!-- Shop-Section -->
     <div class="shop-section">
       <!-- BOX-1 -->
-      <div class="box1 box">
+      <div class="box">
         <div class="box-content">
           <h2>Home & Appliances</h2>
           <div
@@ -139,7 +139,9 @@
           <p>See more</p>
         </div>
       </div>
-      <div class="box2 box">
+
+      <!-- BOX-2 -->
+      <div class="box">
         <div class="box-content">
           <h2>Health & Personal Care</h2>
           <div
@@ -149,7 +151,9 @@
           <p>See more</p>
         </div>
       </div>
-      <div class="box3 box">
+
+      <!-- BOX-3 -->
+      <div class="box">
         <div class="box-content">
           <h2>Furniture & Decor</h2>
           <div
@@ -159,7 +163,9 @@
           <p>See more</p>
         </div>
       </div>
-      <div class="box4 box">
+
+      <!-- BOX-4 -->
+      <div class="box">
         <div class="box-content">
           <h2>Electronics Devices</h2>
           <div
@@ -169,7 +175,9 @@
           <p>See more</p>
         </div>
       </div>
-      <div class="box5 box">
+
+      <!-- BOX-5 -->
+      <div class="box">
         <div class="box-content">
           <h2>Beauty Picks</h2>
           <div
@@ -179,7 +187,9 @@
           <p>See more</p>
         </div>
       </div>
-      <div class="box6 box">
+
+      <!-- BOX-6 -->
+      <div class="box">
         <div class="box-content">
           <h2>Pet Supplies</h2>
           <div
@@ -189,7 +199,9 @@
           <p>See more</p>
         </div>
       </div>
-      <div class="box7 box">
+
+      <!-- BOX-7 -->
+      <div class="box">
         <div class="box-content">
           <h2>Toys - New Arrival!</h2>
           <div
@@ -199,7 +211,9 @@
           <p>See more</p>
         </div>
       </div>
-      <div class="box8 box">
+
+      <!-- BOX-8 -->
+      <div class="box">
         <div class="box-content">
           <h2>Discover Fashion Trends</h2>
           <div
@@ -210,6 +224,78 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer Section -->
+    <footer>
+      <!-- Recommendations-section -->
+      <div class="footer-recommend">
+        <h2>See personalized recommendations</h2>
+        <button>Sign in</button>
+        <p>New Customer? <a>Start here.</a></p>
+      </div>
+
+      <!-- Back To Top-section -->
+      <div class="footer-backtotop">
+        <p>Back to top</p>
+      </div>
+
+      <!-- About Us-section -->
+      <div class="footer-aboutus">
+        <div class="footer-lists">
+          <ul>
+            <p>Get To Know Us</p>
+            <li><a>Careers</a></li>
+            <li><a>Blog</a></li>
+            <li><a>About Us</a></li>
+            <li><a>Investor Relations</a></li>
+            <li><a>Devices</a></li>
+            <li><a>Science</a></li>
+          </ul>
+        </div>
+        <div class="footer-lists">
+          <ul>
+            <p>Make Money with Us</p>
+            <li><a>Sell products with Us</a></li>
+            <li><a>Sell on our Business</a></li>
+            <li><a>Sell apps with Us</a></li>
+            <li><a>Become an Affiliate</a></li>
+            <li><a>Advertise Your Products</a></li>
+            <li><a>Self-Publish with Us</a></li>
+            <li><a>Host with our Hub</a></li>
+            <li><a>See More Make Money with Us</a></li>
+          </ul>
+        </div>
+        <div class="footer-lists">
+          <ul>
+            <p>Our Payment Products</p>
+            <li><a>Our Business Card</a></li>
+            <li><a>Shop with Points</a></li>
+            <li><a>Reload Your Balance</a></li>
+            <li><a>Currency Converter</a></li>
+          </ul>
+        </div>
+        <div class="footer-lists">
+          <ul>
+            <p>Let Us Help You</p>
+            <li><a>Your Account</a></li>
+            <li><a>Your Orders</a></li>
+            <li><a>Shipping Rates & Policies</a></li>
+            <li><a>Returns & Replacements</a></li>
+            <li><a>Manage Your Content and Devices</a></li>
+            <li><a>Help</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Location-section -->
+      <div class="footer-location"></div>
+
+      <!-- Extra Links-section -->
+      <div class="footer-links"></div>
+
+      <!-- Policies-section -->
+      <div class="footer-policies"></div>
+    </footer>
 
     <!-- <script src="script.js"></script> -->
   </body>
